# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-helm-charts"
description = "🐻‍❄️📦 Implementation for handling data storage for Helm charts"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
charted-common = { version = "0.1.0-beta", path = "../common" }
charted-entities = { version = "0.1.0-beta", path = "../entities" }
charted-server = { version = "0.1.0-beta", path = "../server" }
eyre.workspace = true
flate2 = "1.0.28"
itertools = "0.12.1"
multer.workspace = true
noelware-remi = { workspace = true, features = ["fs"] }
regex.workspace = true
remi.workspace = true
once_cell.workspace = true
semver.workspace = true
sentry.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar = "0.4.40"
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
remi-fs.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
