# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-cli"
description = "🐻‍❄️📦 Implementation of the `charted` CLI. the binary is called from the `charted` crate."
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
charted-authz = { version = "0.1.0-beta", path = "../authz" }
charted-authz-ldap = { version = "0.1.0-beta", path = "../authz/ldap" }
charted-authz-local = { version = "0.1.0-beta", path = "../authz/local" }
charted-cache = { version = "0.1.0-beta", path = "../caching" }
charted-common = { version = "0.1.0-beta", path = "../common" }
charted-config = { version = "0.1.0-beta", path = "../config" }
charted-core = { version = "0.1.0-beta", path = "../core", default-features = false }
charted-database = { version = "0.1.0-beta", path = "../database" }
charted-entities = { version = "0.1.0-beta", path = "../entities" }
charted-helm-charts = { version = "0.1.0-beta", path = "../charts" }
charted-metrics = { version = "0.1.0-beta", path = "../metrics" }
charted-server = { version = "0.1.0-beta", path = "../server" }
clap.workspace = true
clap_complete.workspace = true
cli-table = "0.4.7"
eyre.workspace = true
hex = "0.4.3"
noelware-log.workspace = true
noelware-remi = { workspace = true, features = ["fs", "s3", "azure"] }
num_cpus = "1.16.0"
owo-colors.workspace = true
remi-azure.workspace = true
remi-fs.workspace = true
remi-s3.workspace = true
reqwest.workspace = true
sentry.workspace = true
sentry-tracing = "0.34.0"
sqlx.workspace = true
tracing.workspace = true
tracing-error = "0.2.0"
tracing-subscriber.workspace = true
