# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-cli"
description = "🐻‍❄️📦 Implementation of the `charted` CLI"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia = { workspace = true, features = [
    "log",
    "log-writers",
    "log-tracing-log",
] }
charted-authz = { version = "0.1.0", path = "../authz" }
charted-authz-ldap = { version = "0.1.0", path = "../authz/ldap" }
charted-authz-local = { version = "0.1.0", path = "../authz/local" }
charted-config = { version = "0.1.0", path = "../config" }
charted-core = { workspace = true, default-features = false }
charted-database.workspace = true
charted-server = { version = "0.1.0", path = "../server" }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4.5.24"
eyre.workspace = true
num_cpus = "1.16.0"
owo-colors = { version = "5.0.0", features = ["supports-colors"] }
remi-azure = { workspace = true, features = ["tracing"] }
remi-fs = { workspace = true, features = ["tracing"] }
remi-s3 = { workspace = true, features = ["tracing"] }
sentry.workspace = true
sentry-tracing = "0.34.0"
tracing.workspace = true
tracing-error = "0.2.0"
tracing-subscriber.workspace = true

[package.metadata.cargo-machete]
ignored = ["charted-authz-ldap"]
