# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-cli"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["libsystemd"]

libsystemd = ["charted-server/libsystemd"]

[dependencies]
argon2.workspace = true
azalia = { workspace = true, features = ["log", "log-writers"] }
charted-core.workspace = true
charted-config.workspace = true
charted-database.workspace = true
charted-helm-types.workspace = true
charted-server.workspace = true
charted-types.workspace = true
clap.workspace = true
clap_complete.workspace = true
cli-table = "0.5.0"
color-eyre.workspace = true
eyre.workspace = true
num_cpus.workspace = true
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.29.0"
owo-colors = { version = "4.1.0", features = ["supports-color"] }
rayon = "1.10.0"
reqwest.workspace = true
sea-orm-migration.workspace = true
sentry.workspace = true
sentry-tracing = { version = "0.36.0", features = ["backtrace"] }
serde_yaml_ng.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error = "0.2.1"
tracing-loki = { version = "0.2.6", default-features = false, features = [
    "compat-0-2-1",
    "rustls",
] }
tracing-opentelemetry = "0.30.0"
tracing-subscriber.workspace = true
url.workspace = true
