# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-client"
description = "🐻‍❄️📦 REST client for `charted-server`"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[features]
default = []

[dependencies]
charted-core = { workspace = true, features = ["axum"] }
charted-types.workspace = true
charted-helm-types.workspace = true
derive_more = { workspace = true, features = ["from", "display", "error"] }
futures-util = { version = "0.3.31", default-features = false }
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde_json.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true

[build-dependencies]
proc-macro2 = { version = "1.0.93", default-features = false }
quote = { version = "1.0.38", default-features = false }
serde_json.workspace = true
syn = { version = "2.0.98", default-features = false, features = [
    "printing",
    "parsing",
    "clone-impls",
    "full",
] }
utoipa = { workspace = true, features = ["debug"] }
