# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@crate_index//:defs.bzl", "all_crate_deps")
load("//:build/rust_project.bzl", "rust_project")

exports_files(["Cargo.toml"])

rust_project(
    name = "common",
    build_script = True,
    build_script_data = [
        "//:.charted-version",
        "//:.git",
    ],
    build_script_deps = all_crate_deps(build = True),
    include_doctests = True,
    include_tests = True,
    proc_macro_deps = ["@crate_index//:async-trait"],
    deps = [
        ":buildscript",
        "@crate_index//:argon2",
        "@crate_index//:axum",
        "@crate_index//:chrono",
        "@crate_index//:eyre",
        "@crate_index//:hex",
        "@crate_index//:humantime",
        "@crate_index//:md-5",
        "@crate_index//:once_cell",
        "@crate_index//:rand",
        "@crate_index//:regex",
        "@crate_index//:semver",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:sqlx",
        "@crate_index//:thiserror",
        "@crate_index//:tracing",
        "@crate_index//:utoipa",
        "@crate_index//:validator",
    ],
)
