# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-common"
description = "🐻‍❄️📦 Common code that can be exported from outside crates"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia.workspace = true
eyre.workspace = true
noelware-config.workspace = true
humantime = "2.1.0"
once_cell.workspace = true
rand = "0.8.5"
regex.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
chrono.workspace = true
rustc_version = "0.4.0"
which.workspace = true
