# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:build/rust_project.bzl", "rust_project")

rust_project(
    name = "config",
    include_tests = True,
    proc_macro_deps = ["@crate_index//:paste"],
    deps = [
        "//crates/common:charted_common",
        "@crate_index//:aws-sdk-s3",
        "@crate_index//:clap",
        "@crate_index//:eyre",
        "@crate_index//:lazy_static",
        "@crate_index//:merge-struct",
        "@crate_index//:once_cell",
        "@crate_index//:regex",
        "@crate_index//:remi-fs",
        "@crate_index//:remi-s3",
        "@crate_index//:serde",
        "@crate_index//:serde_yaml",
        "@crate_index//:thiserror",
        "@crate_index//:tracing",
    ],
)
