# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-config"
description = "🐻‍❄️📦 Types for charted's configuration file"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia.workspace = true
azure_storage = "0.20.0"
aws-sdk-s3 = "1.25.0"
charted-common = { version = "0.1.0-beta", path = "../common" }
eyre.workspace = true
noelware-config.workspace = true
remi-azure = { workspace = true, features = ["serde"] }
remi-fs = { workspace = true, features = ["serde"] }
remi-s3 = { workspace = true, features = ["serde"] }
serde.workspace = true
toml = "0.8.12"
tracing.workspace = true
ubyte = { version = "0.10.4", features = ["serde"] }

[dependencies.noelware-serde]
version = "0.1.0"
git = "https://github.com/Noelware/core-rs"
rev = "c9d1919536ccfe0ba9b32fc3a9bc43b638e208b4"
features = ["tracing"]
