# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-config"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aws-sdk-s3 = "1.53.0"
azalia = { workspace = true, features = [
    "config",
    "config-derive",
    "serde",
    "serde-tracing",
] }
azure_storage = "0.20.0"
charted-core = { version = "0.1.0", path = "../core", default-features = false, features = [
    "merge",
] }
eyre.workspace = true
hcl-rs = "0.18.0"
remi-azure = { workspace = true, features = ["serde"] }
remi-fs = { workspace = true, features = ["serde"] }
remi-s3 = { workspace = true, features = ["serde"] }
sentry-types = "0.34.0"
serde.workspace = true
tracing.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # the crate name is `hcl` but the name on crates.io is `hcl-rs`.
    "hcl-rs",
]
