# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-config"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia = { workspace = true, features = [
    "config",
    "config+macros",
    "config+sentry",
    "config+tracing",
    "config+url",

    "serde",
    "serde+tracing",

    "remi",
    "remi+azure",
    "remi+fs",
    "remi+s3",
    "remi+serde",

    "regex",
] }
charted-core.workspace = true
derive_more = { workspace = true, features = ["deref", "display"] }
eyre.workspace = true
sentry-types = "0.38.1"
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
derive_more = { workspace = true, features = ["deref"] }
