# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-core"
description = "🐻‍❄️📦 Essential core utilities for the charted project."
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[features]
default = []

openapi = ["dep:utoipa"]
axum = ["dep:axum"]

[dependencies]
argon2.workspace = true
axum = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["display"] }
eyre.workspace = true
humantime = "2.1.0"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }
serde_repr = "0.1.19"
serde-untagged = "0.1.7"
utoipa = { workspace = true, optional = true }

[build-dependencies]
chrono.workspace = true
rustc_version.workspace = true
which = "7.0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
