# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-database"
description = "🐻‍❄️📦 Crate that allows abstraction over the PostgreSQL database"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
charted-cache = { version = "0.1.0-beta", path = "../caching" }
charted-common = { version = "0.1.0-beta", path = "../common" }
charted-config = { version = "0.1.0-beta", path = "../config" }
charted-core = { version = "0.1.0-beta", path = "../core" }
charted-entities = { version = "0.1.0-beta", path = "../entities" }
eyre.workspace = true
sentry.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["uuid"] }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
bollard.workspace = true
charted-cache-inmemory = { path = "../caching/inmemory" }
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
