# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-helm-charts"
description = "🐻‍❄️📦 Actual source code on how to store, query, delete, and create Helm charts within charted-server's persistence layer."
version = "0.0.0-devel.0"
edition = "2021"
homepage = "https://charts.noelware.org"
authors = ["Noel Towa <cutie@floofy.dev>", "Noelware Team <team@noelware.org>"]

[dependencies]
async-recursion = "1.0.5"
bytes = "1.5.0"
charted-common = { version = "0.0.0-devel.0", path = "../common" }
charted-config = { version = "0.0.0-devel.0", path = "../config" }
charted-storage = { version = "0.0.0-devel.0", path = "../storage" }
eyre = "0.6.11"
flate2 = "1.0.28"
itertools = "0.12.1"
multer = { version = "3.0.0", features = ["tokio-io"] }
once_cell = "1.19.0"
regex = "1.10.2"
remi-core = "0.4.3"
semver = "1.0.20"
sentry = "0.31.8"
serde_yaml = "0.9.29"
tar = "0.4.40"
tracing = "0.1.40"

[dev-dependencies]
remi-fs = "0.4.3"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
