# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-helm-charts"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia = { workspace = true, features = ["remi", "remi-fs"] }
charted-types = { version = "0.1.0", path = "../types" }
eyre.workspace = true
flate2 = "1.0.32"
itertools = "0.13.0"
multer.workspace = true
remi.workspace = true
sentry.workspace = true
serde_yaml_ng.workspace = true
tar = "0.4.41"
tokio = { workspace = true, features = ["io-std", "io-util"] }
tracing.workspace = true

[dev-dependencies]
remi-fs.workspace = true
semver.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
