# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-helm-plugin"
description = "🐻‍❄️📦 Helm plugin to help aid developing Helm charts with charted"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia = { workspace = true, features = [
    "log",
    "log-writers",
    "log-tracing-log",
] }
charted-core.workspace = true
charted-types = { workspace = true, features = ["jsonschema"] }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
color-eyre = "0.6.3"
comfy-table = "7.1.1"
etcetera = "0.10.0"
eyre.workspace = true
http = "1.1.0"
reqwest = "0.12.7"
reqwest-middleware = { version = "0.4.0", features = ["json", "http2"] }
schemars = { workspace = true, features = ["url"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
toml = "0.8.19"
tracing.workspace = true
tracing-subscriber.workspace = true
url = { version = "2.5.2", features = ["serde"] }
which = { workspace = true, features = ["tracing"] }
