# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-metrics"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
charted-config.workspace = true
charted-core.workspace = true
eyre.workspace = true
metrics = "0.24.1"
metrics-exporter-opentelemetry = "0.1.1"
metrics-exporter-prometheus.workspace = true
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", default-features = false, features = [
    "grpc-tonic",
    "http-proto",
    "metrics",
    "tracing",
] }
tokio = { workspace = true, features = ["rt", "time"] }
