# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-server"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true, features = ["matched-path"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls", "tokio-rustls"] }
base64 = "0.22.1"
charted-authz.workspace = true
charted-authz-local.workspace = true
charted-config.workspace = true
charted-core = { workspace = true, features = ["openapi", "axum"] }
charted-database.workspace = true
charted-helm-charts.workspace = true
charted-helm-types = { workspace = true, features = ["openapi"] }
charted-types = { workspace = true, features = ["openapi"] }
derive_more = { workspace = true, features = ["display", "from", "error"] }
eyre.workspace = true
jsonwebtoken = "9.3.1"
mime = "0.3.17"
sea-orm.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1.16"
tracing.workspace = true
